    (thanks to Nikodemus Siivola)
  * bug fix: buffered :DIRECTION :IO streams are less likely to become
    confused about their position.  (thanks to Adam Warner and Gerd 
    Moellmann)
  * bug fix: Pretty printing backquoted forms with unquotations in the
    argument list position of various code constructs such as LAMBDA
    now works correctly.  (reported by Paul Dietz)
  * optimization: performance of string output streams is now less
    poor for multiple small sequence writes.
  * optimization: performance of CSUBTYPEP in the presence of complex
    expressions involving CONS and NOT many times has been improved.
    (reported by Paul Dietz)
  * ASDF-INSTALL bug fix: now parses *PROXY* properly.  (thanks to
    Sean Ross)
  * SB-SIMPLE-STREAMS enhancement: simple-streams can now be used as
    streams for the REPL, for the debugger, and so on.  (thanks to
    David Licteblau)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the value of the :REHASH-THRESHOLD argument to MAKE-HASH-TABLE
       is ignored if it is too small, rather than propagating through
       to cause DIVIDE-BY-ZERO or FLOATING-POINT-OVERFLOW errors.
    ** extremely complex negations of CONS types were not being
       sufficiently canonicalized, leading to inconsistencies in
       SUBTYPEP.
    ** VALUES tranformer lost derive type.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))